test: had to rewrite the tests because I didn't actually need a setter for the arraylist, what I needed was the append development card a list method