@@ -390,7 +390,8 @@ class PlayerTest {
   // BVA TC45
   @Test
   void shouldReturnCardsInOrder_whenHoldingDevelopmentCards() {
-    player.setDevelopmentCards(List.of(DevelopmentCard.KNIGHT, DevelopmentCard.MONOPOLY));
+    player.addDevelopmentCard(DevelopmentCard.KNIGHT);
+    player.addDevelopmentCard(DevelopmentCard.MONOPOLY);
     assertEquals(
         List.of(DevelopmentCard.KNIGHT, DevelopmentCard.MONOPOLY),
         player.getDevelopmentCards());
@@ -399,7 +400,7 @@ class PlayerTest {
   // BVA TC46
   @Test
   void shouldNotExposeInternalList_whenMutatingReturnedDevelopmentCards() {
-    player.setDevelopmentCards(List.of(DevelopmentCard.KNIGHT));
+    player.addDevelopmentCard(DevelopmentCard.KNIGHT);
     List<DevelopmentCard> returned = player.getDevelopmentCards();
     assertThrows(RuntimeException.class, () -> returned.add(DevelopmentCard.MONOPOLY));
     assertEquals(List.of(DevelopmentCard.KNIGHT), player.getDevelopmentCards());
@@ -407,50 +408,38 @@ class PlayerTest {
 
   // BVA TC47
   @Test
-  void shouldReplaceContents_whenSettingDevelopmentCards() {
-    player.setDevelopmentCards(List.of(DevelopmentCard.KNIGHT));
+  void shouldAppendToEmptyHand_whenAddingSingleDevelopmentCard() {
+    player.addDevelopmentCard(DevelopmentCard.KNIGHT);
     assertEquals(List.of(DevelopmentCard.KNIGHT), player.getDevelopmentCards());
   }
 
   // BVA TC48
   @Test
-  void shouldHoldEmptyHand_whenSettingEmptyDevelopmentCards() {
-    player.setDevelopmentCards(List.of(DevelopmentCard.KNIGHT));
-    player.setDevelopmentCards(List.of());
-    assertTrue(player.getDevelopmentCards().isEmpty());
+  void shouldAppendPreservingOrder_whenAddingSingleDevelopmentCardToExistingHand() {
+    player.addDevelopmentCard(DevelopmentCard.KNIGHT);
+    player.addDevelopmentCard(DevelopmentCard.MONOPOLY);
+    assertEquals(
+        List.of(DevelopmentCard.KNIGHT, DevelopmentCard.MONOPOLY),
+        player.getDevelopmentCards());
   }
 
   // BVA TC49
   @Test
-  void shouldThrowNullPointer_whenSettingNullDevelopmentCards() {
-    assertThrows(NullPointerException.class, () -> player.setDevelopmentCards(null));
+  void shouldThrowNullPointer_whenAddingNullSingleDevelopmentCard() {
+    assertThrows(NullPointerException.class, () -> player.addDevelopmentCard(null));
   }
 
   // BVA TC50
   @Test
-  void shouldThrowNullPointer_whenSettingDevelopmentCardsContainingNull() {
-    List<DevelopmentCard> withNull = Arrays.asList(DevelopmentCard.KNIGHT, null);
-    assertThrows(NullPointerException.class, () -> player.setDevelopmentCards(withNull));
+  void shouldRetainDuplicates_whenAddingSameSingleDevelopmentCardTwice() {
+    player.addDevelopmentCard(DevelopmentCard.KNIGHT);
+    player.addDevelopmentCard(DevelopmentCard.KNIGHT);
+    assertEquals(
+        List.of(DevelopmentCard.KNIGHT, DevelopmentCard.KNIGHT),
+        player.getDevelopmentCards());
   }
 
   // BVA TC51
-  @Test
-  void shouldDiscardOldContents_whenSettingDevelopmentCardsOverExistingHand() {
-    player.setDevelopmentCards(List.of(DevelopmentCard.KNIGHT));
-    player.setDevelopmentCards(List.of(DevelopmentCard.MONOPOLY));
-    assertEquals(List.of(DevelopmentCard.MONOPOLY), player.getDevelopmentCards());
-  }
-
-  // BVA TC52
-  @Test
-  void shouldNotAliasSourceList_whenSettingDevelopmentCards() {
-    List<DevelopmentCard> source = new ArrayList<>(List.of(DevelopmentCard.KNIGHT));
-    player.setDevelopmentCards(source);
-    source.add(DevelopmentCard.MONOPOLY);
-    assertEquals(List.of(DevelopmentCard.KNIGHT), player.getDevelopmentCards());
-  }
-
-  // BVA TC53
   @Test
   void shouldAppendToEmptyHand_whenAddingDevelopmentCards() {
     player.addDevelopmentCards(List.of(DevelopmentCard.KNIGHT, DevelopmentCard.ROAD_BUILDING));
@@ -459,25 +448,25 @@ class PlayerTest {
         player.getDevelopmentCards());
   }
 
-  // BVA TC54
+  // BVA TC52
   @Test
   void shouldConcatenatePreservingOrder_whenAddingDevelopmentCardsToExistingHand() {
-    player.setDevelopmentCards(List.of(DevelopmentCard.KNIGHT));
+    player.addDevelopmentCard(DevelopmentCard.KNIGHT);
     player.addDevelopmentCards(List.of(DevelopmentCard.MONOPOLY));
     assertEquals(
         List.of(DevelopmentCard.KNIGHT, DevelopmentCard.MONOPOLY),
         player.getDevelopmentCards());
   }
 
-  // BVA TC55
+  // BVA TC53
   @Test
   void shouldLeaveHandUnchanged_whenAddingEmptyDevelopmentCardList() {
-    player.setDevelopmentCards(List.of(DevelopmentCard.KNIGHT));
+    player.addDevelopmentCard(DevelopmentCard.KNIGHT);
     player.addDevelopmentCards(List.of());
     assertEquals(List.of(DevelopmentCard.KNIGHT), player.getDevelopmentCards());
   }
 
-  // BVA TC56
+  // BVA TC54
   @Test
   void shouldRetainDuplicates_whenAddingDevelopmentCardsWithDuplicates() {
     player.addDevelopmentCards(List.of(DevelopmentCard.KNIGHT, DevelopmentCard.KNIGHT));
@@ -486,20 +475,20 @@ class PlayerTest {
         player.getDevelopmentCards());
   }
 
-  // BVA TC57
+  // BVA TC55
   @Test
   void shouldThrowNullPointer_whenAddingNullDevelopmentCards() {
     assertThrows(NullPointerException.class, () -> player.addDevelopmentCards(null));
   }
 
-  // BVA TC58
+  // BVA TC56
   @Test
   void shouldThrowNullPointer_whenAddingDevelopmentCardsContainingNull() {
     List<DevelopmentCard> withNull = Arrays.asList(DevelopmentCard.KNIGHT, null);
     assertThrows(NullPointerException.class, () -> player.addDevelopmentCards(withNull));
   }
 
-  // BVA TC59
+  // BVA TC57
   @Test
   void shouldNotAliasSourceList_whenAddingDevelopmentCards() {
     List<DevelopmentCard> source = new ArrayList<>(List.of(DevelopmentCard.KNIGHT));
